force-app/main/default/objects/BatchLeadConvertError__c/BatchLeadConvertError__c.object-meta.xml
<CustomObject>
    <label>BatchLeadConvertErrors</label>
    <nameField>
        <label>BatchLeadConvertErrors Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BatchLeadConvertErrorss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>