force-app/main/default/objects/BatchLeadConvertError__c/fields/AsyncApexJobId__c.field-meta.xml
<CustomField>
    <fullName>AsyncApexJobId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BatchApexErrorEvent</label>
    <referenceTo>BatchApexErrorEvent__c</referenceTo>
    <relationshipLabel>BatchLeadConvertErrorss</relationshipLabel>
    <relationshipName>BatchLeadConvertErrorss3</relationshipName>
    <type>Lookup</type>
</CustomField>