force-app/main/default/objects/BatchLeadConvertError__c/fields/Records__c.field-meta.xml
<CustomField>
    <fullName>Records__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BatchApexErrorEvent</label>
    <referenceTo>BatchApexErrorEvent__c</referenceTo>
    <relationshipLabel>BatchLeadConvertErrorss (BatchApexErrorEvent)</relationshipLabel>
    <relationshipName>BatchLeadConvertErrorss4</relationshipName>
    <type>Lookup</type>
</CustomField>